tooling/nargo_cli/tests/snapshots/execution_success/global_nested_array_regression_9270/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_B: [[str<2>; 1]; 2] = [["DS"], ["EN"]];

fn main() -> pub [[str<2>; 1]; 2] {
    // Safety: comment added by `nargo expand`
    unsafe { func_2(G_B) };
    G_B
}

unconstrained fn func_2(mut b: [[str<2>; 1]; 2]) {
    let mut idx_d: u32 = 0_u32;
    loop {
        if idx_d == 1_u32 {
            break;
        } else {
            idx_d = idx_d + 1_u32;
            b[0_u32][0_u32] = G_B[1_u32][0_u32];
        }
    }
}
