tooling/nargo_cli/tests/snapshots/execution_success/global_nested_array_regression_9270/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 2,
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "string",
            "length": 2
          }
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _3",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : [_0, _1, _2, _3]",
    "EXPR [ (1, _0) -68 ]",
    "EXPR [ (1, _1) -83 ]",
    "EXPR [ (1, _2) -69 ]",
    "EXPR [ (1, _3) -78 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": []
}
