tooling/nargo_cli/tests/snapshots/execution_success/global_nested_array_regression_9270/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[global_nested_array_regression_9270] Circuit output: [["DS"], ["EN"]]
